[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow-array = "53.3.0"
arrow-flight = { version = "53.3.0", features = ["cli", "flight-sql-experimental", "tls"] }
arrow-schema = "53.3.0"
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots"] }
tracing-log = "0.2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.31"
arrow-ipc = "53.3.0"

